fix affix jumping issues

--- a/_sass/styles.scss
+++ b/_sass/styles.scss
@@ -16,6 +16,7 @@ a {
 }
 
 .navbar-default {
+  margin-bottom: 0;
   background-color: #FFF;
   border-color: #EEE;
   @media (max-width: $screen-xs-max) {
